syntax = "proto3";

package bridge;

import "google/protobuf/timestamp.proto";

message Empty {}

message AdminRegistered {
  string admin = 1;
  uint64 initial_funding = 2;
  int64 ts = 3;
}

message UserRegistered {
  string user = 1;
  uint64 initial_balance = 2;
  int64 ts = 3;
}

message AdminDeactivated {
  string admin = 1;
  int64 ts = 2;
}

message UserDeactivated {
  string user = 1;
  int64 ts = 2;
}

message FundingRequested {
  string user_wallet = 1;
  string target_admin = 2;
  uint64 amount = 3;
  int64 ts = 4;
}

message FundingApproved {
  string user_wallet = 1;
  string approved_by = 2;
  uint64 amount = 3;
  int64 ts = 4;
}

enum CommandMode {
  REQUEST_RESPONSE = 0;
  ONE_WAY = 1;
}

message CommandEvent {
  string sender = 1;
  string target = 2;
  uint64 command_id = 3;
  CommandMode mode = 4;
  bytes payload = 5;
  int64 ts = 6;
}

message BridgeEvent {
  oneof event {
    AdminRegistered admin_registered = 1;
    UserRegistered user_registered = 2;
    AdminDeactivated admin_deactivated = 3;
    UserDeactivated user_deactivated = 4;
    FundingRequested funding_requested = 5;
    FundingApproved funding_approved = 6;
    CommandEvent command_event = 7;
  }
}

service BridgeService { rpc StreamEvents(Empty) returns (stream BridgeEvent); }
